--- a/WebServer/public/index.html
+++ b/WebServer/public/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
     <meta charset="utf-8">
     <title>Weather app</title>
   </head>
   <body>
     <h1>From a static file!</h1>
+    <img src="/img/Yoda.jpeg">
   </body>
 </html>
